agregando gifs party

--- a/index.html
+++ b/index.html
@@ -7,10 +7,24 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hola</h1>
+    <h1>hola aqui voy</h1>
     <h2>hola</h2>
     <h3>hola</h3>
     <div>hola soy un div</div>
     <span>hola soy un span</span>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor fugiat maxime doloremque quasi, dolores laudantium cupiditate officia corporis adipisci. Consectetur, reprehenderit incidunt nulla officiis magnam optio ea veniam aspernatur in?</p>
+    <h1>fiesta1</h1>
+    <img src="images/yay.gif" alt="">
+    <h2>fiesta2</h2>
+    <img src="images/color.gif" alt="">
+    <h3>fiesta3</h3>
+    <img src="images/esketonparty.gif" alt="">
+    <h4>fiesta4</h4>
+    <img src="images/giphy.gif" alt="">
+    <h5>fiesta5</h5>
+    <img src="images/interparty.gif" alt="">
+    <h6>fiesta6</h6>
+    <img src="images/giphy_s.gif" alt="">
+    <a href="https://www.google.com/">google</a>
 </body>
 </html>
